--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "./build.sh"
   functions = "functions"
-  publish = "public/nextjs/.next/dist"
+  publish = "cmd/gateway/nextjs/dist"
 
 [build.environment]
   GO_IMPORT_PATH = "github.com/frankmeza/netlify-go"
