--- a/cmd/gateway/nextjs/package.json
+++ b/cmd/gateway/nextjs/package.json
@@ -2,6 +2,7 @@
     "name": "golang-nextjs-portable",
     "version": "0.1.0",
     "private": true,
+    "proxy": "http://localhost:8000",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -9,9 +10,14 @@
         "export": "rm -rf .next && next build && next export -o dist"
     },
     "dependencies": {
+        "@mdx-js/loader": "^1.6.22",
+        "@mdx-js/react": "^1.6.22",
+        "@next/mdx": "^12.0.7",
         "next": "10.1.3",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "remark-emoji": "^3.0.2",
+        "remark-images": "^3.1.0",
         "swr": "0.5.5"
     },
     "devDependencies": {
