--- a/cmd/gateway/nextjs/package.json
+++ b/cmd/gateway/nextjs/package.json
@@ -12,11 +12,21 @@
         "@mdx-js/loader": "^1.6.22",
         "@mdx-js/react": "^1.6.22",
         "@next/mdx": "^12.0.8",
+        "@reduxjs/toolkit": "^1.6.1",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@types/react-router-dom": "^5.3.0",
+        "@types/redux-logger": "^3.0.9",
+        "bulma": "^0.9.3",
+        "classnames": "^2.3.1",
         "next": "10.1.3",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-redux": "^7.2.5",
+        "redux-logger": "^3.0.6",
         "remark-emoji": "^3.0.2",
         "remark-images": "^3.1.0",
+        "redux-saga": "^1.1.3",
         "styled-components": "5.3.3",
         "swr": "0.5.5"
     },
