--- a/cmd/gateway/nextjs/package.json
+++ b/cmd/gateway/nextjs/package.json
@@ -20,13 +20,14 @@
         "bulma": "^0.9.3",
         "classnames": "^2.3.1",
         "next": "10.1.3",
+        "node-sass": "^7.0.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-redux": "^7.2.5",
         "redux-logger": "^3.0.6",
+        "redux-saga": "^1.1.3",
         "remark-emoji": "^3.0.2",
         "remark-images": "^3.1.0",
-        "redux-saga": "^1.1.3",
         "styled-components": "5.3.3",
         "swr": "0.5.5"
     },
