try using Taskfile to build prod

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "./build.sh"
+  command = "task build-prod"
   functions = "functions"
   publish = "cmd/gateway/nextjs/dist"
 
