--- a/taskfile.yml
+++ b/taskfile.yml
@@ -23,6 +23,15 @@ tasks:
     dir: cmd/gateway
     cmds:
       - go run main.go -dev 1
+
+  build-prod:
+    cmds:
+      - task: client-export
+      - mkdir -p "$(pwd)/functions"
+      - GOBIN=$(pwd)/functions go install ./...
+      - chmod +x "$(pwd)"/functions/*
+      - go env
+
 # run `task server` in one window,
 # run `task client` in another,
 # then go to localhost:3000
